fix overflowed design

--- a/front/styles/Header.module.scss
+++ b/front/styles/Header.module.scss
@@ -4,6 +4,7 @@
   top: 0;
   z-index: 100;
   background: $main-background-color-light;
+  width: 100vw;
   user-select: none;
   height: 7rem;
   @include mq(d_md) {
@@ -40,7 +41,7 @@
 }
 
 .header_inner {
-  width: 100vw;
+  width: 100%;
   height: $headerHeight;
   top: 0;
   position: relative;
