--- a/front/styles/globals.scss
+++ b/front/styles/globals.scss
@@ -15,6 +15,23 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* スクロールの背景の設定 */
+html::-webkit-scrollbar-track {
+  border-radius: 5px;
+  box-shadow: 0 0 4px rgba($color: #000000, $alpha: 0) inset;
+}
+
+/* スクロールのつまみ部分の設定 */
+html::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem 0 0 0.5rem;
+  background: $accent-color;
+}
+
 .wrapper {
   padding: 5rem 2rem;
 }
